--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -222,7 +222,7 @@
             </div>
 
       </div>
-    </section><!-- End Our Team Section --> -->
+    </section> End Our Team Section -->
 
     <section class="about-lists">
       <div class="container">
