--- a/templates/base.html
+++ b/templates/base.html
@@ -16,7 +16,7 @@
   <meta content="" name="keywords">
 
   <!-- Favicons -->
-  <link href="{% static 'assets/img/favicon.png'%}" rel="icon">
+  <link href="{% static 'assets/images/favicons/aqualink.png'%}" rel="icon">
   <link href="{% static 'assets/img/apple-touch-icon.png'%}" rel="apple-touch-icon">
 
   <!-- Google Fonts -->
@@ -189,7 +189,7 @@
 
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Mamba</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span>Aqualink</span></strong>. All Rights Reserved
         </div>
         <div class="credits">
           <!-- All the links in the footer should remain intact. -->
