--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -224,7 +224,7 @@
       </div>
     </section> End Our Team Section -->
 
-    <section class="about-lists">
+    <section id="clint" class="clint">
       <div class="container">
         <div class="section-title">
           <h2>Our Clients</h2>
