--- a/templates/base.html
+++ b/templates/base.html
@@ -95,7 +95,7 @@
               {% endfor %}
             </ul>
           </li>
-          <li><a href="/#about-lists">Clients</a></li>
+          <li><a href="/#clint">Clients</a></li>
           <li><a href="/#contact">Contact Us</a></li>
         </ul>
       </nav><!-- .nav-menu -->
@@ -189,15 +189,9 @@
 
       <div class="container">
         <div class="copyright">
-          &copy; Copyright <strong><span>Aqualink</span></strong>. All Rights Reserved
+          &copy; Copyright <strong><span style="color:#28B1DA;">Aqualink</span></strong>. All Rights Reserved
         </div>
-        <div class="credits">
-          <!-- All the links in the footer should remain intact. -->
-          <!-- You can delete the links only if you purchased the pro version. -->
-          <!-- Licensing information: https://bootstrapmade.com/license/ -->
-          <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/mamba-one-page-bootstrap-template-free/ -->
-          Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-        </div>
+        
       </div>
 
     </footer><!-- End Footer -->
