--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -30,7 +30,7 @@
 
                 <h2 class="animate__animated animate__fadeInDown">{{ top.title }}</h2>
                 <p class="animate__animated animate__fadeInUp">{{top.descriptison}}</p>
-                <a href="#about" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
+                <a href="https://www.thedailystar.net/star-youth/news/affordable-solution-combat-covid-19-1945869" target="_blank" class="btn-get-started animate__animated animate__fadeInUp scrollto">Read More</a>
               </div>
             </div>
           </div>
@@ -76,14 +76,16 @@
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <div class="icon"><i class="bx bx-happy-beaming"></i></div>
-              <h4 class="title"><a href=""> WE GUARANTEE QUALITY WORK</a></h4>
+              <p style="font-weight:bold;text-align:justify">Aqualink Bangladesh Ltd. works with clients to
+                design and develop all sort of hardware and
+                software solution. Our solutions are fully focused
+                on our user that emphases on client first.</p>
             </div>
 
-            <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
+            <!-- <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
               <div class="icon"><i class="bx bx-building-house"></i></div>
               <h4 class="title"><a href="">RIGHT PLACE FOR GREAT SERVICE</a></h4>
-            </div>
+            </div> -->
 
           </div>
         </div>
@@ -236,7 +238,7 @@
 
           {% for client in clients %}
           <div  title="{{client.name}}" class="col-lg-2 col-md-6 content-item" data-aos="fade-up">
-            <div><img src="{{ client.img_clients.url }}" class="img-fluid" alt=""></div>
+            <div style="width:200px !important; height:200px !important"><img src="{{ client.img_clients.url }}" class="img-fluid " alt=""></div>
           </div>
             {% endfor %}
 
