--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1481,3 +1481,20 @@ section {
 #footer .credits a {
   color: #9eccf4;
 }
+
+
+
+/* Paste this css to your style sheet file or under head tag */
+/* This only works with JavaScript,
+if it's not present, don't show loader */
+.no-js #loader { display: none;  }
+.js #loader { display: block; position: absolute; left: 100px; top: 0; }
+.se-pre-con {
+	position: fixed;
+	left: 0px;
+	top: 0px;
+	width: 100%;
+	height: 100%;
+	z-index: 9999;
+	background: url(https://static.dribbble.com/users/1186261/screenshots/3718681/_______.gif) center no-repeat #fff;
+}
