preload animation test

--- a/templates/base.html
+++ b/templates/base.html
@@ -49,20 +49,20 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <script type="text/javascript">
+  <!-- <script type="text/javascript">
   $(window).load(function() {
   // Animate loader off screen
   $(".se-pre-con").fadeOut("slow");
 });
-  </script>
+  </script> -->
 
 
 </head>
 
 <body>
-  <div class="se-pre-con">
+  <!-- <div class="se-pre-con">
 
-  </div>
+  </div> -->
 
   <!-- ======= Top Bar ======= -->
   <section style="background-color:#5C768D" id="topbar" class="d-none d-lg-block">
