--- a/templates/base.html
+++ b/templates/base.html
@@ -49,20 +49,15 @@
   * Author: BootstrapMade.com
   * License: https://bootstrapmade.com/license/
   ======================================================== -->
-  <!-- <script type="text/javascript">
-  $(window).load(function() {
-  // Animate loader off screen
-  $(".se-pre-con").fadeOut("slow");
-});
-  </script> -->
+
 
 
 </head>
 
 <body>
-  <!-- <div class="se-pre-con">
+  <div class="se-pre-con">
 
-  </div> -->
+  </div>
 
   <!-- ======= Top Bar ======= -->
   <section style="background-color:#5C768D" id="topbar" class="d-none d-lg-block">
@@ -303,6 +298,12 @@
     // instead of a settings object
   ]
   });
+  </script>
+  <script type="text/javascript">
+  $(window).load(function() {
+  // Animate loader off screen
+  $(".se-pre-con").fadeOut("slow");
+});
   </script>
   </body>
 
