--- a/templates/base.html
+++ b/templates/base.html
@@ -300,7 +300,7 @@
   });
   </script>
   <script type="text/javascript">
-  $(window).load(function() {
+  $(window).on("load",function() {
   // Animate loader off screen
   $(".se-pre-con").fadeOut("slow");
 });
