--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -237,8 +237,8 @@
 
 
           {% for client in clients %}
-          <div  title="{{client.name}}" class="col-lg-2 col-md-6 content-item" data-aos="fade-up">
-            <div style="width:200px !important; height:200px !important"><img src="{{ client.img_clients.url }}" class="img-fluid " alt=""></div>
+          <div  title="{{client.name}}" class="col-lg-2 col-md-2 col-sm-6 content-item " data-aos="fade-up">
+            <div style="width:80% !important; height:80% !important"><img style="border:none;" src="{{ client.img_clients.url }}" class="img-fluid card" alt=""></div>
           </div>
             {% endfor %}
 
