--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 
-
+{% load static %}
 {% block page_content %}
 
 
@@ -64,7 +64,7 @@
         <div class="row no-gutters">
           <div class="col-lg-6 video-box">
             <img src="{{ about.img_about.url }}" class="img-fluid" alt="">
-            <a href="{{ about.about_link }}" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <a href="{% static 'assets/video/aboutus.mp4'%}" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center about-content">
