--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -64,7 +64,7 @@
         <div class="row no-gutters">
           <div class="col-lg-6 video-box">
             <img src="{{ about.img_about.url }}" class="img-fluid" alt="">
-            <a href="{% static 'assets/video/aboutus.mp4'%}" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
+            <a href="https://aqualinkbangladesh.com/static/assets/video/aboutus.mp4" class="venobox play-btn mb-4" data-vbtype="video" data-autoplay="true"></a>
           </div>
 
           <div class="col-lg-6 d-flex flex-column justify-content-center about-content">
