--- a/templates/base.html
+++ b/templates/base.html
@@ -59,6 +59,37 @@
 
   </div>
 
+
+  
+  <!-- Load Facebook SDK for JavaScript -->
+  <div id="fb-root"></div>
+  <script>
+    window.fbAsyncInit = function() {
+      FB.init({
+        xfbml            : true,
+        version          : 'v8.0'
+      });
+    };
+
+    (function(d, s, id) {
+    var js, fjs = d.getElementsByTagName(s)[0];
+    if (d.getElementById(id)) return;
+    js = d.createElement(s); js.id = id;
+    js.src = 'https://connect.facebook.net/en_US/sdk/xfbml.customerchat.js';
+    fjs.parentNode.insertBefore(js, fjs);
+  }(document, 'script', 'facebook-jssdk'));</script>
+
+  <!-- Your Chat Plugin code -->
+  <div class="fb-customerchat"
+    attribution=setup_tool
+    page_id="106923130831159"
+theme_color="#0084ff"
+logged_in_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?"
+logged_out_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?">
+  </div>
+
+
+
   <!-- ======= Top Bar ======= -->
   <section style="background-color:#5C768D" id="topbar" class="d-none d-lg-block">
     <div class="container clearfix" >
