total price bug,home button,nuber added

--- a/home/templates/product/product_details.html
+++ b/home/templates/product/product_details.html
@@ -56,14 +56,14 @@
 
             {% if over.left_div_270_552 %}
             <div style="text-align:center" class="col-lg-6 col-md-6 content-item" data-aos="fade-up">
-              <h2>Sensores</h2>
+              <!-- <h2>Sensores</h2> -->
               <br>
               <img style="width:100%" src="{{over.left_div_270_552.url}}" alt="">
             </div>
             {% endif %}
             {% if over.right_div_600_500 %}
             <div style="text-align:center" class="col-lg-6 col-md-6 content-item" data-aos="fade-up" data-aos-delay="100">
-              <h2>Software</h2>
+              <!-- <h2>Software</h2> -->
               <br>
               <img style="width:100%" src="{{over.right_div_600_500.url}}" alt="">
 
