--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
   <link rel="stylesheet" type="text/css" href="//cdn.jsdelivr.net/npm/slick-carousel@1.8.1/slick/slick.css"/>
 
 
-  <script src="http://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
+  <script src="https://ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script>
   <!-- <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.2.4/jquery.min.js"></script> -->
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" />
@@ -95,7 +95,7 @@ logged_out_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?">
     <div class="container clearfix" >
       <div style="color:#fff" class="contact-info float-left" >
         <i style="color:#fff; !important" class="icofont-envelope"></i><a style="color:#fff; !important" href="mailto:office@aqualinkbd.net">office@aqualinkbd.net</a>
-        <i style="color:#fff; !important" class="icofont-phone"></i> +880 1675932265
+        <i style="color:#fff; !important" class="icofont-phone"></i> +8801675-932265 &nbsp; +8801777-138311
       </div>
       <div  class="social-links float-right">
         <a style="color:#fff" href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
@@ -120,7 +120,7 @@ logged_out_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?">
 
       <nav class="nav-menu float-right d-none d-lg-block">
         <ul>
-          <li class="active"><a href="/">Home</a></li>
+          <li class="active"><a href="/#home">Home</a></li>
           <li><a href="/#about">About Us</a></li>
           <li><a href="/#services">Services</a></li>
           <li class="drop-down"><a href="/#product">Products</a>
@@ -205,7 +205,7 @@ logged_out_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?">
             <div style="text-align:right" class="col-lg-3 col-md-6 footer-info">
               <h3>Aqualink</h3>
             <strong>Corresponding Office:</strong>
-              <p>+880 1675932265
+              <p><span style="font-family: 'Times New Roman';">+8801675-932265</span> <br><span style="font-family: 'Times New Roman';">+8801777-138311</span>
                 <br>
                 office@aqualinkbd.net
                 <br>
@@ -213,7 +213,7 @@ logged_out_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?">
 
 
               <strong>Head Office:</strong>
-              <p>02 8834577
+              <p><span style="font-family: 'Times New Roman';">02 8834577</span> 
                 <br>
               212, Tejgaon Industrial Area, Dhaka-1208.</p>
 
