--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -7,6 +7,7 @@
 
   <!-- ======= Hero Section ======= -->
   <section id="hero">
+    <div id="home"></div>
     <div class="hero-container">
       <div id="heroCarousel" class="carousel slide carousel-fade" data-ride="carousel">
 
