responsive bug fixes

--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block page_content %}
-<div class="container my-5">
+<div  style="overflow-x:auto;" class="container my-5">
   <div class="my-5">
     <h2>Your Cart</h2>
   </div>
