--- a/home/templates/product/product_details.html
+++ b/home/templates/product/product_details.html
@@ -12,7 +12,7 @@
 
   <div class="container">
     <h1 style="padding-top:50px; font-weight: 900; color:#fff">{{product.name}}</h1>
-    <hr style="border: 3px solid #fff; width:500px;">
+    <hr style="border: 3px solid #fff; width:40%;">
     <p style="padding:50px; color:#fff; font-size:20px">{{product.description}}</p>
     <a target="_blank" href="{{product.brochure.url}}"><button class="btn btn-danger" style="margin-bottom:50px" type="button" name="button">Download Our Brochure</button></a>
 
