--- a/shop/templates/shop/shop.html
+++ b/shop/templates/shop/shop.html
@@ -54,6 +54,7 @@
         <button onclick="filter()" type="submit" href="#!" class="btn btn-info">Search</button>
     </form>
     <br>
+    <div  style="overflow-x:auto;">
         <h3>YOUR CART</h3>
 
         <h5>{{message}}</h5>
@@ -79,7 +80,7 @@
               <input onchange="val('{{price.price}}','content{{product.pk|safe}}',value)" id="{{product.pk|safe}}"
                type="number" min="1" max="100" value="1" id="points" name="points">
               </td> -->
-              <td><span style="margin-left: 30px;" class="quantity">1</span></td>
+              <td><span  class="quantity">1</span></td>
               <td><span class="totalprice" id="content{{product.pk|safe}}">{{price.price}}</span></td>
               <td><a href="{% url 'shop:remove_from_cart' pk=product.pk %}" class="btn btn-danger btn-sm">Remove</a></td>
             </tr>
@@ -100,6 +101,7 @@
             </tr> -->
           </tbody>
         </table>
+      </div>
 
         <a href="{%url 'shop:cart'%}" class="btn btn-success mr-4">View Cart</a>
         <!-- <a href="" class="btn btn-success mr-4">Proceed To Checkout</a> -->
