cart button color

--- a/templates/base.html
+++ b/templates/base.html
@@ -137,7 +137,7 @@ logged_out_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?">
           </li>
           <li><a href="/#clint">Clients</a></li>
           <li><a href="/shop">Shop</a></li>
-          <li><a href="{%url 'shop:cart'%}"><i class="icofont-shopping-cart"></i> {{ request.session.product_order }}</a></li>
+          <li><a style="color: #DC3545;" href="{%url 'shop:cart'%}"><i class="icofont-shopping-cart"></i> {{ request.session.product_order }}</a></li>
           <li><a href="/#contact">Contact Us</a></li>
         </ul>
       </nav><!-- .nav-menu -->
