--- a/templates/pdf/invoice.html
+++ b/templates/pdf/invoice.html
@@ -25,7 +25,7 @@
 <hr>
 	<div class="">
 		<h3 style="color:#186077">Amount due (BDT)</h3>
-		<h3>Tk {{total_price}}</h3>
+		<h3>Tk {{vat_total}}</h3>
 	</div>
 	<hr>
 
@@ -64,8 +64,14 @@
 			<tr>
 				<td></td>
 				<td></td>
+				<td><b>Total:</b></td>
+				<td>tk {{vat}}</td>
+			</tr>
+			<tr>
+				<td></td>
+				<td></td>
 				<td><b>Amount Due(BDT):</b></td>
-				<td>tk {{total_price}}</td>
+				<td>tk {{vat_total}}</td>
 			</tr>
 		</table>
 	</div>
