--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -1496,5 +1496,5 @@ if it's not present, don't show loader */
 	width: 100%;
 	height: 100%;
 	z-index: 9999;
-	background: url(https://digitalsynopsis.com/wp-content/uploads/2016/06/loading-animations-preloader-gifs-ui-ux-effects-18.gif) center no-repeat #fff;
+	background: url(https://aqualinkbangladesh.com/static/assets/loadpage/aqualink.gif) center no-repeat #fff;
 }
