--- a/shop/templates/shop/cart.html
+++ b/shop/templates/shop/cart.html
@@ -64,7 +64,6 @@
     Checkout
   </button> -->
   <a class="btn btn-info mr-4" data-toggle="modal" data-target="#onlinePayment" href="#">Checkout</a>
-  <a  onclick="frm('/shop/quotation/')" class="btn btn-warning mr-4 quotation_btn" data-toggle="modal" data-target="#modalLoginForm" href="#">Send me Quotation</a>
 
   <!-- <li style="align:center" class="dropdown-menu" aria-labelledby="dropdownMenuButton">
     <ul><a class="btn btn-info mr-4" data-toggle="modal" data-target="#onlinePayment" href="#">Online Payment</a></ul>
@@ -78,7 +77,7 @@
   <div  class="modal-content ">
     <div class="modal-header">
 
-          <a onclick="frm('/shop/order/')" href="" class="btn btn-info" data-toggle="modal" data-target="#modalLoginForm">Cash On Delivery</a>
+          <a onclick="frm()" href="" class="btn btn-info" data-toggle="modal" data-target="#modalLoginForm">Cash On Delivery</a>
 
           <a class="btn btn-info" disabled >Online Payment</a>
 
@@ -87,13 +86,6 @@
 </div>
 </div>
 </div>
-
-
-
-
-
-
-
 <div class="modal fade" id="modalLoginForm" tabindex="-1" role="dialog" aria-labelledby="myModalLabel"
   aria-hidden="true">
   <div class="modal-dialog" role="document">
@@ -104,7 +96,7 @@
           <span aria-hidden="true">&times;</span>
         </button>
       </div>
-      <form method="post" action="/shop/order/" id="user_form" class="user_form">
+      <form method="post" action="/shop/order/" class="user_form">
         {% csrf_token %}
       <div class="modal-body mx-3">
 
@@ -155,7 +147,6 @@
 
 
 
-
 <script type="text/javascript">
 
 var sum = 0;
@@ -186,8 +177,7 @@ function val(price,product,quantity) {
   var total_vat = Math.round(sum*.15)+sum;
   document.getElementById('vatntotalall').innerHTML = '&#2547; '+ total_vat;
 }
-function frm(action){
-  document.getElementById("user_form").action = action
+function frm(){
   var quantity = [];
   $('.quantity').each(function(){
      quantity.push(parseInt(this.value));
