--- a/templates/pdf/invoice.html
+++ b/templates/pdf/invoice.html
@@ -64,7 +64,7 @@
 			<tr>
 				<td></td>
 				<td></td>
-				<td><b>Vat:</b></td>
+				<td><b>Total:</b></td>
 				<td>tk {{vat}}</td>
 			</tr>
 			<tr>
