--- a/templates/base.html
+++ b/templates/base.html
@@ -41,6 +41,11 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/modernizr/2.8.3/modernizr.js"></script>
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick-theme.min.css" integrity="sha512-17EgCFERpgZKcm0j0fEq1YCJuyAWdz9KUtv1EjVuaOz8pDnh/0nZxmU6BBXwaaxqoi9PQXnRWqlcDB027hgv9A==" crossorigin="anonymous" />
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.css" integrity="sha512-yHknP1/AwR+yx26cB1y0cjvQUMvEa2PFzt1c9LlS4pRQ5NOTZFWbhBig+X9G9eYW/8m0/4OXNx8pxJ6z57x0dw==" crossorigin="anonymous" />
+  
+  <!-- data table cdn -->
+  <link href="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.css'%}" rel="stylesheet">
+  <link rel="stylesheet" href="https://cdn.datatables.net/1.10.22/css/jquery.dataTables.min.css">
+  
 
 
   <!-- =======================================================
@@ -139,6 +144,7 @@ logged_out_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?">
           <li><a href="/shop">Shop</a></li>
           <li><a style="color: #DC3545;" href="{%url 'shop:cart'%}"><i class="icofont-shopping-cart"></i> {{ request.session.product_order }}</a></li>
           <li><a href="/#contact">Contact Us</a></li>
+          <li><a href="{% url 'career:career' %}">Career</a></li>
         </ul>
       </nav><!-- .nav-menu -->
 
@@ -283,6 +289,10 @@ logged_out_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?">
     <script src="{% static 'assets/vendor/owl.carousel/owl.carousel.min.js'%}"></script>
     <script src="{% static 'assets/vendor/isotope-layout/isotope.pkgd.min.js'%}"></script>
     <script src="{% static 'assets/vendor/aos/aos.js'%}"></script>
+    <!-- <script src="{% static 'assets/vendor/datatables/jquery.dataTables.min.js'%}"></script> -->
+    <!-- <script src="{% static 'assets/vendor/datatables/dataTables.bootstrap4.min.js'%}"></script> -->
+    <script src = "http://cdn.datatables.net/1.10.18/js/jquery.dataTables.min.js" defer ></script>
+
 
     <!-- Template Main JS File -->
     <script src="{% static 'assets/js/main.js'%}"></script>
@@ -290,6 +300,13 @@ logged_out_greeting="Hi! Welcome to Aqualink Bangladesh. How can we help you?">
 
   <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
   <script src="https://cdnjs.cloudflare.com/ajax/libs/slick-carousel/1.9.0/slick.min.js" integrity="sha512-HGOnQO9+SP1V92SrtZfjqxxtLmVzqZpjFFekvzZVWoiASSQgSr4cw9Kqd2+l8Llp4Gm0G8GIFJ4ddwZilcdb8A==" crossorigin="anonymous"></script>
+
+  <script type="text/javascript">
+    $(document).ready(function() {
+        $('#dataTable').DataTable();
+                                });
+  </script>
+
 
   <script type="text/javascript">
   $('.yourclass').slick({
