--- a/static/assets/css/style.css
+++ b/static/assets/css/style.css
@@ -797,14 +797,15 @@ section {
 
 .counts .count-box {
   box-shadow: 0px 0 16px rgba(0, 0, 0, 0.1);
-  padding: 30px;
+  padding: 10px;
   background: #fff;
-  margin-bottom: 30px;
+  margin-bottom: 10px;
+  width: 100%;
 }
 
 .counts .count-box i {
   display: block;
-  font-size: 64px;
+  /* font-size: 64px; */
   margin-bottom: 15px;
 }
 
