about us paragrah change

--- a/home/templates/home/index.html
+++ b/home/templates/home/index.html
@@ -77,10 +77,10 @@
             </div>
 
             <div class="icon-box" data-aos="fade-up" data-aos-delay="100">
-              <p style="font-weight:bold;text-align:justify">Aqualink Bangladesh Ltd. works with clients to
-                design and develop all sort of hardware and
-                software solution. Our solutions are fully focused
-                on our user that emphases on client first.</p>
+              <p style="font-weight:bold;text-align:justify">
+                Aqualink Bangladesh Ltd. works with clients to design and develop 
+                all sort of hardware and software solution.
+                 Our solutions are fully focused on our user and emphasise on the client first.</p>
             </div>
 
           </div>
